--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,6 +1,9 @@
-.card {
+.text {
   /* background: #fff; */
   border-radius: 2px;
+  border-color: black;
+  border-style: dashed;
+  border-width: 3px;
   height: auto;
   margin: 1rem;
   position: relative;
@@ -8,12 +11,14 @@
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
   opacity: .5;
-  font-size: 2rem
+  font-size: 2.5rem;
+  font-family: 'Beth Ellen', cursive !important
   /* background-image: url("./IMG/BG.gif") */
 }
 
-.card:hover {
-  opacity: 1;
+.text:hover {
+  
+  box-shadow: 0 6px 12px #999, 0 6px 12px #999;
 }
 
 .card > .img-container {
