--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -2,17 +2,14 @@
   /* background: #fff; */
   border-radius: 2px;
   border-color: black;
-  border-style: dashed;
   border-width: 3px;
   height: auto;
   margin: 1rem;
   position: relative;
-  width: 90%;
+  /* width: 90%; */
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
   opacity: .5;
-  font-size: 2.5rem;
-  font-family: 'Beth Ellen', cursive !important
   /* background-image: url("./IMG/BG.gif") */
 }
 
