--- a/client/src/components/ORGheader/style.css
+++ b/client/src/components/ORGheader/style.css
@@ -1,5 +1,5 @@
 .nombre {
-    /* background: rgb(233, 233, 226); */
+    background: rgb(233, 233, 226);
     height: 150px;
     text-align: center;
     vertical-align: middle;
@@ -8,7 +8,7 @@
 }
 
 .logo {
-    /* background: rgb(212, 229, 209); */
+    background: rgb(212, 229, 209);
     height: 150px;
 }
 
@@ -16,10 +16,11 @@
     height: 100%;
 }
 
-.jumbotron {
+.foto {
     background-image: URL("/images/backgroundPrueba.jpg");
     background-size: cover;
-    /* background-repeat: no-repeat; */
+    height: auto;
+    background-repeat: no-repeat;
 }
 
 .infoEspecifica {
