--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -24,16 +24,20 @@
     z-index: 2;
   }
 
-  .friendsHead {
-    /* margin: 0, auto; */
+   .friendsHead {
+    margin: 0, auto;
     bottom: 0;
     position: relative;
     right: 20rem;
+    opacity: 0;
   }
 
-  .textHead{
+  /*.textHead{
     color: white;
-  }
+    margin-top: -10rem;
+    left: 50%;
+    position: absolute;
+  } */
   
   /* .hero h1, .hero h2 {
     color: white;
