--- a/client/src/components/ONGcard/style.css
+++ b/client/src/components/ONGcard/style.css
@@ -9,7 +9,7 @@
   /* width: 90%; */
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
-  opacity: .5;
+  /* opacity: .5; */
   /* background-image: url("./IMG/BG.gif") */
 }
 
