--- a/client/src/components/ONGcard/style.css
+++ b/client/src/components/ONGcard/style.css
@@ -36,7 +36,7 @@
   padding-top: 1rem;
   font-size: 1rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  height: 12rem;
+  /* height: 12rem; */
 }
 
 .card > .content > ul {
