fix css global text, login

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,10 @@
   background-color: aqua;
 }
 
+/* .colBtns {
+  margin-left: "38%",
+} */
+
 /* .container {
   margin: auto;
   text-align: center;
