--- a/client/src/components/ORGheader/style.css
+++ b/client/src/components/ORGheader/style.css
@@ -1,21 +1,22 @@
 .nombre {
+    overflow: hidden;
     background: rgba(233, 233, 226, 0.358);
-    height: 150px;
+    height: 23vh;
     text-align: center;
     vertical-align: middle;
-    line-height: 150px;
-    font-size: 80px;
+    line-height: 23vh;
     font-family: 'Montserrat', sans-serif;
-    color: rgb(134, 65, 199);
-
-    font-size: 5rem;
+    font-size: 8vw;
     color: rgb(68, 68, 68);
     text-shadow: 3px 2px 3px rgb(177, 177, 177);
+    flex-grow: 1;
 }
 
 .logo {
     background: rgba(233, 233, 226, 0.358);
-    height: 150px;
+    float: right;
+    height: 23vh;
+    width: 23vh
 }
 
 .logoo {
@@ -31,12 +32,14 @@
 
 .infoEspecifica {
     background: rgba(233, 233, 226, 0.358);
+    padding-top: 3em;
     padding-left: 35px;
     text-align: justify; 
 }
 
 .objNecesidades {
     background: rgba(233, 233, 226, 0.358);
+    padding-top: 3em;
     padding-right: 35px;
     text-align: justify; 
 }
@@ -51,15 +54,15 @@ h3 {
     font-size: 15px;
     font-family:  'Nanum Gothic', sans-serif;
     /* display: flex; */
-    height: 8rem;
+    height: auto;
         /* margin-bottom: 30px;
         padding-bottom: 15px; */
 }
 
 .footerInfo {
     font-size: 1rem;
-    display: flex;
     margin-top: 2rem;
+    margin-bottom: 2rem
 }
 
 p {
@@ -80,7 +83,12 @@ p {
     background-size: cover;
     /* opacity: .5; */
 }
-
 /* .imagenFondo {
     background-image: url(../../images/titleBackground.jpg);
 } */
+
+@media (min-width: 960px){
+    .nombre{
+        font-size: 5rem;
+    }
+}
