--- a/client/src/components/EventCard/style.css
+++ b/client/src/components/EventCard/style.css
@@ -1,7 +1,6 @@
 .card {
-  /* background: #fff; */
   border-radius: 2px;
-  height: auto;
+  min-height: 50vh;
   margin: 1rem;
   position: relative;
   width: 25%;
@@ -9,38 +8,41 @@
   text-align: left;
   opacity: .9;
   font-size: 2rem
-  /* background-image: url("./IMG/BG.gif") */
 }
 
 .card:hover {
   opacity: 1;
 }
 
-.card > .img-container {
-  height: 100%;
+.img-container {
+  height: auto;
+  max-height: 30vh;
   overflow: hidden;
   text-align: center;
   opacity: 1;
-  /* background:#6CADDC; */
-}
-.card > .img-container > img {
   width: 100%;
 }
 
+.post-image {
+  width: 100% !important;
+  min-height: 30vh;
+}
+
 .card > .content {
-  padding-left: .1rem;
-  padding-right: .3rem;
+  padding-top: 0.3rem !important;
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
   font-size: 1rem;  
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif !important;
 }
 
-.card > .content > ul {
-  list-style-type: none;
-  font-family: 'Nanum Gothic', sans-serif;
+.resetmargin{
+  margin-left: 0px;
+  margin-bottom: 0px;
 }
 
-.card > .content > ul > li {
-  margin-top: 18px;
-  padding-inline: 5rem;
-  font-family: 'Nanum Gothic', sans-serif;
+@media (max-width: 737px){
+  .card{
+    width: 100%
+  }
 }
