--- a/client/src/components/EventCard/style.css
+++ b/client/src/components/EventCard/style.css
@@ -7,7 +7,7 @@
   box-shadow: 0 2px 4px #999;
   text-align: left;
   opacity: .9;
-  font-size: 2rem
+  font-size: 2rem;
 }
 
 .card:hover {
@@ -33,7 +33,7 @@
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
   font-size: 1rem;  
-  font-family: 'Nanum Gothic', sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 @media (max-width: 992px){
