--- a/client/src/pages/Login.module.css
+++ b/client/src/pages/Login.module.css
@@ -23,3 +23,10 @@
     color: crimson;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+@media screen and (max-width: 767px){
+    .formContainer {
+        width: 90%;
+        margin: 30px 5%;
+    }
+}
