--- a/client/src/pages/Register.module.css
+++ b/client/src/pages/Register.module.css
@@ -3,3 +3,21 @@
     margin: 50px 10%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.errorDisplay {
+    margin-top: 15px;
+    color: crimson;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media screen and (max-width: 767px){
+    .needsSelect {
+        margin-top: 16px;
+    }
+
+    .formContainer {
+        width: 90%;
+        margin: 30px 5%;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+}
