--- a/client/src/components/EventCard/style.css
+++ b/client/src/components/EventCard/style.css
@@ -1,5 +1,5 @@
 .card {
-  border-radius: 2px;
+  border-radius: 5px;
   min-height: 120px;
   margin: 1rem;
   position: relative;
@@ -32,6 +32,7 @@
 .post-image {
   width: 100% !important;
   min-height: 30vh;
+  border-radius: 5px;
 }
 
 .card > .content {
@@ -43,15 +44,17 @@
 }
 
 .delete-btn {
+  background-color: #ffffff;
+  width: 40px;
+  height: 40px;
   position: absolute;
   top: 5px;
   right: 8px;
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-}
-
-.card:hover > .delete-btn {
-  display: block;
+  border-radius: 50%;
 }
 
 @media (max-width: 992px){
